# midee-tools

./: .gitignore
apps/pt_losses/: .gitignore  README.md  pyproject.toml
apps/pt_losses/examples/: sample_input.json  sample_input.yaml
apps/pt_losses/installer/: PerdidaPostensadoRFEM6.iss
apps/pt_losses/pt_losses/: __init__.py  __main__.py
apps/pt_losses/src/pt_losses/: __init__.py
apps/pt_losses/src/pt_losses/adapters/: __init__.py  rfem_client.py  rfem_stub.py
apps/pt_losses/src/pt_losses/cli/: main.py
apps/pt_losses/src/pt_losses/domain/: __init__.py  materials.py  models.py  tendon_geometry.py
apps/pt_losses/src/pt_losses/gui/: __init__.py  __main__.py  app.py
apps/pt_losses/src/pt_losses/gui/assets/: README.txt  manual_uso_perdida_postensado_rfem6.html
apps/pt_losses/src/pt_losses/services/: __init__.py  calculator.py  io.py  rfem_conversion.py
apps/pt_losses/tests/: test_calculator.py  test_cli.py  test_rfem_conversion.py
apps/pt_losses/tools/: diag_rfem_member_load.py
apps/wind_tools/: main.py
core/branding/: theme.py
core/ui_base/: base_window.py
docs/: ARCHITECTURE.md  CHANGELOG.md  README.md  SECURITY.md
